# integrador-api/src/models/metodoPago.ts
@@ -1,15 +1,24 @@
+// src/models/metodoPago.ts
 import { Schema, model, Document } from 'mongoose';
 
 export interface IMetodoPago extends Document {
-    id_metodo_pago: number;
-    nombre_metodo: string;
-    id_tipo_pago?: Schema.Types.ObjectId;
+  _id: Schema.Types.ObjectId;
+  id_tipo_pago: Schema.Types.ObjectId;
+  nombre_metodo: 'Contado' | 'Credito';
 }
 
 const MetodoPagoSchema = new Schema<IMetodoPago>({
-    id_metodo_pago: { type: Number, unique: true, required: true },
-    nombre_metodo: { type: String, required: true },
-    id_tipo_pago: { type: Schema.Types.ObjectId, ref: 'TiposPagos', required: false }
+  id_tipo_pago: {
+    type: Schema.Types.ObjectId,
+    ref: 'TiposPagos',
+    required: true,
+  },
+  nombre_metodo: {
+    type: String,
+    required: true,
+    enum: ['Contado', 'Credito'],
+    default: 'Contado',
+  },
 });
 
 export const MetodoPago = model<IMetodoPago>('MetodoPago', MetodoPagoSchema);
